--- a/Final_Website/static/styles_main.css
+++ b/Final_Website/static/styles_main.css
@@ -20,21 +20,12 @@ slider */
 .error {
     position: absolute;
     visibility: hidden;
-}
-
-@media (max-width: 650px) {
-    * {
-        visibility: hidden;
-    }
-    .error {
-        visibility: visible;
-        color: red;
-        font-size: auto;
-        width: 75vw;
-        text-align: center;
-        justify-self: center;
-        color: black;
-    }
+    color: red;
+    font-size: auto;
+    width: 75vw;
+    text-align: center;
+    justify-self: center;
+    color: black;
 }
 
 @media (max-height: 535px) {
@@ -43,13 +34,15 @@ slider */
     }
     .error {
         visibility: visible;
-        color: red;
-        font-size: auto;
-        width: 75vw;
-        text-align: center;
-        justify-self: center;
-        color: black;
     }
+}
+
+.hide {
+    visibility: hidden;
+}
+
+.show {
+    visibility: visible;
 }
 
 body,
